# context-crafter-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP for context-crafter-mcp.txt  IMPLEMENTATION_REPORT.md  LICENSE  MANUAL_STEPS.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/context-crafter-adversarial-testing/: SKILL.md
.codex/: AGENTS.md
.github/: README-customizations.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: context-crafter-analyzer.agent.md  context-crafter-docs-sync.agent.md  context-crafter-mcp-implementer.agent.md
.github/hooks/: check_generated_contract.py  check_mcp_contract_sync.py  check_stdio_quiet.py  hooks.json
.github/instructions/: context-crafter-customization.instructions.md  context-crafter-src.instructions.md  context-crafter-tests.instructions.md
.github/prompts/: challenge-repo-truth-fix.prompt.md  cli-mcp-contract-change.prompt.md  create-mcp-tool.prompt.md  docs-truth-sync.prompt.md  harden-analyzer.prompt.md  validation-hardening.prompt.md
.github/skills/context-crafter-analyzer-authoring/: SKILL.md
.github/skills/context-crafter-evidence-grounding/: SKILL.md
.github/skills/context-crafter-mcp-development/: SKILL.md
.github/skills/python-mcp-server-dev/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  smoke-repos.yml
.kimi/: AGENTS.md  kimi-export-session_-20260530-091755.md
docs/: ARCHITECTURE.md  LIMITATIONS.md  MCP_CLIENTS.md  OUTPUT_CONTRACT.md  PRE_1_0_GATE.md  PUBLIC_SURFACE_FREEZE.md  REAL_REPO_SMOKE_MATRIX.md  ROADMAP.md  SCANNER.md  TEST_ENVIRONMENT_HANDOFF.md  project_state.md
docs/adr/: 0001-python-product-layer-replaceable-scanner.md
docs/testing/: README.md  TESTING_STATUS.md  TEST_ENVIRONMENT_HANDOFF.md
examples/demo-repo/: README.md  pyproject.toml
examples/demo-repo/src/greeter/: __init__.py  cli.py  core.py
examples/demo-repo/tests/: test_greeter.py
examples/outputs/: AGENT_BRIEF.md  AI_CONTEXT_INDEX.md  ARCHITECTURE_SUMMARY.md  COMMANDS.md  CONTEXT_MANIFEST.json  DEPENDENCY_GRAPH.md  DEPENDENCY_GRAPH.mmd  EVIDENCE_LEDGER.json  PROJECT_OVERVIEW.md  REPO_MAP.md  RUN_STATE.json  SCAN_REPORT.md  VALIDATION_REPORT.md
scripts/: bench_scan.py  installed_artifact_smoke.ps1  local_release_gate.ps1  smoke_repos.py  validate_project_state.py  validate_public_surface.py  validate_release_docs.py
src/context_crafter_mcp/: __init__.py  cli.py  detectors.py  filesystem.py  graph.py  models.py  parsers.py  ranking.py  redaction.py  scanner.py  server.py  state.py  validation.py
src/context_crafter_mcp/analyzers/: __init__.py  dotnet.py  generic.py  go.py  java.py  node.py  python.py  registry.py  rust.py  snapshot_utils.py
src/context_crafter_mcp/renderers/: html.py  markdown.py  mermaid.py
src/repo_docs_mcp/: __init__.py  detectors.py  filesystem.py  graph.py  models.py  server.py  state.py
src/repo_docs_mcp/analyzers/: __init__.py  dotnet.py  generic.py  go.py  java.py  node.py  python.py  rust.py
src/repo_docs_mcp/renderers/: __init__.py  html.py  markdown.py  mermaid.py
tests/: test_challenge_repo.py  test_cli.py  test_detection_pollution.py  test_detectors.py  test_dotnet_analyzer.py  test_evidence.py  test_fixtures.py  test_generic_analyzer.py  test_generic_fallback_honesty.py  test_go_analyzer.py  test_golden_fixtures.py  test_graph.py  test_html_renderer.py  test_java_analyzer.py  test_mcp_smoke.py  test_mcp_tools.py  test_mermaid_workspace.py  test_metric_consistency.py  test_node_analyzer.py  test_profiles.py  test_python_analyzer.py  test_ranking.py  test_redaction.py  test_registry.py  test_renderers.py  test_run_state.py  test_rust_analyzer.py  test_safety.py  test_scan_config.py  test_scanner_binary.py  test_scanner_budget.py  test_self_test.py  test_session_completion_verifier.py  test_source_text_safety.py  test_stdio_quiet.py  test_stress_fixture.py  test_validation_extended.py  test_validation_report.py
tests/fixtures/dotnet_basic/: App.sln
tests/fixtures/generic_unknown/: README.md
tests/fixtures/go_basic/: go.mod
tests/fixtures/java_basic/: pom.xml
tests/fixtures/node_ts_basic/: package.json
tests/fixtures/node_ts_basic/src/: index.ts
tests/fixtures/python_basic/: pyproject.toml
tests/fixtures/rust_basic/: Cargo.toml
