[project]
name = "context-crafter-mcp"
version = "0.5.0"
description = "Local-first MCP server that turns source repositories into compact AI-agent context: project overviews, repo maps, dependency graphs, architecture notes, and validation reports."
requires-python = ">=3.11"
authors = [
    {name = "context-crafter-mcp contributors"},
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["mcp", "documentation", "repository", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]",
    "langgraph",
    "pydantic",
    "uuid-utils<0.17",
    "pathspec",
    "javalang",
    "markdown",
]

[project.urls]
Homepage = "https://github.com/0langa/context-crafter-mcp"
Repository = "https://github.com/0langa/context-crafter-mcp"
Issues = "https://github.com/0langa/context-crafter-mcp/issues"
Changelog = "https://github.com/0langa/context-crafter-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
parsers = [
    "tree-sitter",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-c-sharp",
]

[project.scripts]
context-crafter-mcp = "context_crafter_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_crafter_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = false

[[tool.mypy.overrides]]
module = [
    "tree_sitter",
    "tree_sitter.*",
    "tree_sitter_javascript",
    "tree_sitter_typescript",
    "tree_sitter_go",
    "tree_sitter_rust",
    "tree_sitter_c_sharp",
]
ignore_missing_imports = true
